# hexcv

./: README.md  east.cpp  meson-init.sh  meson.build  shape-rec.cpp  showcam.cpp
lib/: util.cpp
